# faible

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
proc-macro-definitions/: Cargo.toml
proc-macro-definitions/src/: lib.rs
src/: lib.rs
tests/: faible.rs  faible_enum.rs  faible_structs.rs  faible_union.rs
