[package]
name = "faible_proc-macro-definitions"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2021"
description = "Procedural macros for the `faible` crate."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/faible"
homepage = "https://github.com/Tamschi/faible/tree/v0.0.1"
documentation = "https://docs.rs/faible/0.0.1"
keywords = []
categories = []
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
]
resolver = "2"
publish = false

[lib]
proc-macro = true

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/faible" }
is-it-maintained-open-issues = { repository = "Tamschi/faible" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
call2-for-syn = "2.0.3"
heck = "0.4.0"
itoa = "1.0.1"
proc-macro2 = "1.0.37"
quote = "1.0.17"
syn = { version = "1.0.91", features = ["full", "visit-mut"] }
tap = "1.0.1"
vec-drain-where = "1.0.1"

[dev-dependencies]
